--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ dmypy.json
 .pyre/
 trained_models/cyclegan/loss_log.txt
 trained_models/cyclegan/loss_avg.txt
+trained_models/cyclegan/model.pth
