--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-#     - name: Run migrations
-#       run: python manage.py migrate
+    - name: Run migrations
+      run: python manage.py migrate
 #     - name: Run tests
 #       run: python manage.py test
